--- a/graph_experiments.ipynb
+++ b/graph_experiments.ipynb
@@ -51,6 +51,7 @@
     "import shap\n",
     "\n",
     "# Tensorflow deep learning\n",
+    "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras.layers import LSTM\n",
@@ -76,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Config variables\n",
-    "\n",
+    "# Configuring variables\n",
     "filename = \"example_logs/mdl/BPI2017-Final.csv\"\n",
     "object_types = [\"application\", \"offer\"]\n",
     "parameters = {\n",
@@ -98,7 +98,6 @@
    "outputs": [],
    "source": [
     "# Importing OCEL\n",
-    "\n",
     "ocel = csv_import_factory.apply(\n",
     "    filename, csv_import_factory.TO_OCEL, parameters, file_path_object_attribute_table\n",
     ")"
@@ -111,7 +110,6 @@
    "outputs": [],
    "source": [
     "# Constructing feature graphs\n",
-    "\n",
     "activities = list(set(ocel.log.log[\"event_activity\"].tolist()))\n",
     "feature_set = [\n",
     "    (feature_extractor.EVENT_REMAINING_TIME, ()),\n",
@@ -127,20 +125,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up for machine learning tasks\n",
+    "# Loading pickled feature storage objects\n",
+    "with open(f\"data/processed/BPI2017-feature_storage.pkl\", \"rb\") as file:\n",
+    "    feature_storage = pickle.load(file)\n",
     "\n",
-    "feature_storage.extract_normalized_train_test_split(0.3, state=42)\n",
-    "\n",
-    "# keep list of first three events for comparability of regression use case\n",
-    "events_to_remove = []\n",
-    "for g in tqdm(feature_storage.feature_graphs):\n",
-    "    event_ids = [n.event_id for n in g.nodes]\n",
-    "    event_ids.sort()\n",
-    "    events_to_remove = events_to_remove + event_ids[:3]\n",
-    "\n",
-    "label_order = None\n",
-    "\n",
-    "accuracy_dict = {}"
+    "with open(f\"data/processed/BPI2017-ocel.pkl\", \"rb\") as file:\n",
+    "    ocel = pickle.load(file)"
    ]
   },
   {
@@ -149,16 +139,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Building train-val-test graphs for DGL\n",
+    "# Setting up for machine learning tasks\n",
+    "feature_storage.extract_normalized_train_test_split(0.3, state=42)\n",
     "\n",
-    "train_idx, val_idx = train_test_split(feature_storage.training_indices, test_size=0.2)\n",
-    "x_train, y_train = generate_graph_dataset(\n",
-    "    feature_storage.feature_graphs, train_idx, ocel\n",
-    ")\n",
-    "x_val, y_val = generate_graph_dataset(feature_storage.feature_graphs, val_idx, ocel)\n",
-    "x_test, y_test = generate_graph_dataset(\n",
-    "    feature_storage.feature_graphs, feature_storage.test_indices, ocel\n",
-    ")"
+    "# keep list of first three events for comparability of regression use case\n",
+    "events_to_remove = []\n",
+    "for g in tqdm(feature_storage.feature_graphs):\n",
+    "    event_ids = [n.event_id for n in g.nodes]\n",
+    "    event_ids.sort()\n",
+    "    events_to_remove = events_to_remove + event_ids[:3] # is that not 4?\n",
+    "\n",
+    "label_order = None\n",
+    "\n",
+    "accuracy_dict = {}"
    ]
   },
   {
@@ -189,9 +182,9 @@
     "print(\"_\"*len(uc6))\n",
     "print(uc6)\n",
     "print(\"_\"*len(uc6))\n",
-    "train_idx, val_idx = train_test_split(\n",
-    "    feature_storage.training_indices, test_size=0.2\n",
-    ")\n",
+    "\n",
+    "# Building train-val-test graphs for DGL\n",
+    "train_idx, val_idx = train_test_split(feature_storage.training_indices, test_size=0.2)\n",
     "x_train, y_train = generate_graph_dataset(\n",
     "    feature_storage.feature_graphs, train_idx, ocel\n",
     ")\n",
@@ -200,7 +193,7 @@
     "    feature_storage.feature_graphs, feature_storage.test_indices, ocel\n",
     ")\n",
     "\n",
-    "# initialize data loaders\n",
+    "# Initializing custom keras dataloaders\n",
     "train_loader = GraphDataLoader(\n",
     "    x_train,\n",
     "    y_train,\n",
@@ -229,11 +222,27 @@
     "    on_gpu=False,\n",
     ")\n",
     "\n",
-    "# define GCN model\n",
+    "# Defining GCN model\n",
     "tf.keras.backend.clear_session()\n",
     "model = GCN(24, 24)\n",
-    "optimizer = tf.keras.optimizers.Adam(lr=0.01)\n",
-    "loss_function = tf.keras.losses.MeanAbsoluteError()\n",
+    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.01)\n",
+    "loss_function = tf.keras.losses.MeanAbsoluteError()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "# run tensorflow training loop\n",
     "epochs = 30\n",
