--- a/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
+++ b/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "Processing...\n",
-      "22056it [01:11, 307.35it/s]\n",
+      "22056it [01:07, 326.93it/s]\n",
       "Done!\n"
      ]
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "Processing...\n",
-      "9453it [00:32, 292.66it/s]\n",
+      "9453it [00:31, 302.11it/s]\n",
       "Done!\n"
      ]
     }
@@ -144,13 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "I'm updated!\n",
       "GCN(\n",
       "  (conv1): GCNConv(23, 12)\n",
       "  (conv2): GCNConv(12, 12)\n",
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +264,6 @@
     "    for batch in test_loader:\n",
     "        batch.to(device)  \n",
     "        pred = model(batch.x.float(), \n",
-    "                        batch.edge_attr.float(),\n",
     "                        batch.edge_index, \n",
     "                        batch.batch) \n",
     "        loss = loss_fn(torch.squeeze(pred), batch.y.float())\n",
@@ -317,28 +317,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/44 [00:03<?, ?it/s]\n"
+      "  0%|          | 0/44 [00:04<?, ?it/s]\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "forward() takes 2 positional arguments but 4 were given",
+     "evalue": "forward() takes 3 positional arguments but 4 were given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m run_training(criterion)\n",
-      "Cell \u001b[1;32mIn[19], line 85\u001b[0m, in \u001b[0;36mrun_training\u001b[1;34m(loss_fn)\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[39mif\u001b[39;00m early_stopping_counter \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m10\u001b[39m: \u001b[39m# = x * 5 \u001b[39;00m\n\u001b[0;32m     83\u001b[0m     \u001b[39m# Training\u001b[39;00m\n\u001b[0;32m     84\u001b[0m     model\u001b[39m.\u001b[39mtrain()\n\u001b[1;32m---> 85\u001b[0m     loss \u001b[39m=\u001b[39m train_one_epoch(epoch, model, train_loader, optimizer, loss_fn)\n\u001b[0;32m     86\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m | Train Loss \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     88\u001b[0m     \u001b[39m# Testing\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[19], line 27\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[1;34m(epoch, model, train_loader, optimizer, loss_fn)\u001b[0m\n\u001b[0;32m     25\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad() \n\u001b[0;32m     26\u001b[0m \u001b[39m# Passing the node features and the connection info\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m pred \u001b[39m=\u001b[39m model(batch\u001b[39m.\u001b[39;49mx\u001b[39m.\u001b[39;49mfloat(), \n\u001b[0;32m     28\u001b[0m                         batch\u001b[39m.\u001b[39;49medge_index, \n\u001b[0;32m     29\u001b[0m                         batch\u001b[39m.\u001b[39;49mbatch) \n\u001b[0;32m     30\u001b[0m \u001b[39m# Calculating the loss and gradients\u001b[39;00m\n\u001b[0;32m     31\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(torch\u001b[39m.\u001b[39msqueeze(pred), batch\u001b[39m.\u001b[39my\u001b[39m.\u001b[39mfloat())\n",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m results \u001b[39m=\u001b[39m run_training(criterion)\n",
+      "Cell \u001b[1;32mIn[6], line 85\u001b[0m, in \u001b[0;36mrun_training\u001b[1;34m(loss_fn)\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[39mif\u001b[39;00m early_stopping_counter \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m10\u001b[39m: \u001b[39m# = x * 5 \u001b[39;00m\n\u001b[0;32m     83\u001b[0m     \u001b[39m# Training\u001b[39;00m\n\u001b[0;32m     84\u001b[0m     model\u001b[39m.\u001b[39mtrain()\n\u001b[1;32m---> 85\u001b[0m     loss \u001b[39m=\u001b[39m train_one_epoch(epoch, model, train_loader, optimizer, loss_fn)\n\u001b[0;32m     86\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m | Train Loss \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     88\u001b[0m     \u001b[39m# Testing\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[6], line 27\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[1;34m(epoch, model, train_loader, optimizer, loss_fn)\u001b[0m\n\u001b[0;32m     25\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad() \n\u001b[0;32m     26\u001b[0m \u001b[39m# Passing the node features and the connection info\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m pred \u001b[39m=\u001b[39m model(batch\u001b[39m.\u001b[39;49mx\u001b[39m.\u001b[39;49mfloat(), \n\u001b[0;32m     28\u001b[0m                         batch\u001b[39m.\u001b[39;49medge_index, \n\u001b[0;32m     29\u001b[0m                         batch\u001b[39m.\u001b[39;49mbatch) \n\u001b[0;32m     30\u001b[0m \u001b[39m# Calculating the loss and gradients\u001b[39;00m\n\u001b[0;32m     31\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(torch\u001b[39m.\u001b[39msqueeze(pred), batch\u001b[39m.\u001b[39my\u001b[39m.\u001b[39mfloat())\n",
       "File \u001b[1;32mc:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "\u001b[1;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 4 were given"
+      "\u001b[1;31mTypeError\u001b[0m: forward() takes 3 positional arguments but 4 were given"
      ]
     }
    ],
