first tries predicting with pickled model

--- a/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
+++ b/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
@@ -6,11 +6,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Torch version: 1.13.1+cu117\n",
-      "Cuda available: True\n",
+      "Torch version: 1.13.1+cpu\n",
+      "Cuda available: False\n",
       "Torch geometric version: 2.2.0\n"
      ]
     }
@@ -23,7 +31,11 @@
     "from statistics import median as median\n",
     "from tqdm import tqdm\n",
     "import os\n",
-    "os.chdir(\"/home/tim/Development/OCELFeatureExtractionExperiments/\")\n",
+    "from platform import system\n",
+    "if system().lower() == \"windows\":\n",
+    "    os.chdir(\"c:\\\\Users\\\\Tim\\\\Development\\\\OCELFeatureExtractionExperiments\")\n",
+    "elif system().lower() == \"linux\":\n",
+    "    os.chdir(\"/home/tim/Development/OCELFeatureExtractionExperiments/\")\n",
     "from copy import deepcopy\n",
     "\n",
     "# Data handling\n",
@@ -36,13 +48,23 @@
     "# PyG\n",
     "import torch\n",
     "from ocpa_PyG_integration.EventGraphDataset import EventGraphDataset\n",
+    "from torch_geometric.loader import DataLoader\n",
     "\n",
     "# PyTorch TensorBoard support\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from datetime import datetime\n",
     "\n",
     "# Global variables\n",
-    "from experiment_config import STORAGE_PATH, RANDOM_SEED, TARGET_LABEL"
+    "from experiment_config import STORAGE_PATH, RANDOM_SEED, TARGET_LABEL\n",
+    "\n",
+    "# Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Custom models\n",
+    "from model import GCN, GAT\n",
+    "\n",
+    "# Model evaluation\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
   },
   {
@@ -55,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "Processing...\n",
-      "22056it [00:06, 3229.28it/s]\n",
+      "22056it [01:21, 269.77it/s]\n",
       "Done!\n"
      ]
     }
@@ -79,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "Processing...\n",
-      "9453it [00:02, 3246.15it/s]\n",
+      "9453it [00:30, 313.29it/s]\n",
       "Done!\n"
      ]
     }
@@ -133,36 +155,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EventGraphDataset (#graphs=9453):\n",
+       "+------------+----------+----------+\n",
+       "|            |   #nodes |   #edges |\n",
+       "|------------+----------+----------|\n",
+       "| mean       |     12.5 |     13.7 |\n",
+       "| std        |      3.5 |      4.4 |\n",
+       "| min        |      6   |      5   |\n",
+       "| quantile25 |     10   |     11   |\n",
+       "| median     |     12   |     13   |\n",
+       "| quantile75 |     14   |     16   |\n",
+       "| max        |     38   |     50   |\n",
+       "+------------+----------+----------+"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_test.get_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAT(\n",
-      "  (gconv1): GATConv(23, 12, heads=1)\n",
-      "  (gconv2): GATConv(12, 12, heads=1)\n",
+      "GCN(\n",
+      "  (conv1): GCNConv(23, 12)\n",
+      "  (conv2): GCNConv(12, 12)\n",
       "  (out): Linear(in_features=12, out_features=1, bias=True)\n",
       ")\n",
-      "Number of parameters: 505\n",
-      "Device: cuda:0\n"
+      "Number of parameters: 457\n",
+      "Device: cpu\n"
      ]
     }
    ],
    "source": [
-    "from model import GCN, GAT\n",
-    "import torch \n",
-    "from torch_geometric.loader import DataLoader\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "def count_parameters(model) ->int:\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "\n",
     "# Initialize model\n",
-    "model = GAT(ds_train.num_node_features, 12)\n",
+    "model = GCN(ds_train.num_node_features, 12)\n",
     "print(model)\n",
     "print(f'Number of parameters: {count_parameters(model)}')\n",
     "\n",
@@ -228,9 +274,21 @@
     "    \n",
     "    return last_loss\n",
     "\n",
-    "def run_training(num_epochs, model, train_loader, validation_loader, optimizer, loss_fn, timestamp):\n",
+    "def run_training(\n",
+    "    num_epochs: int,\n",
+    "    model,\n",
+    "    train_loader,\n",
+    "    validation_loader,\n",
+    "    optimizer,\n",
+    "    loss_fn,\n",
+    "    timestamp,\n",
+    "    training_results_dir: str,\n",
+    "    seed:int = None,\n",
+    "):\n",
+    "    if seed:\n",
+    "        torch.manual_seed(seed)\n",
     "    best_vloss = 1_000_000.\n",
-    "    writer = SummaryWriter(f'runs/ocel_GNN_{model.get_class_name()}_{timestamp}')\n",
+    "    writer = SummaryWriter(f'{training_results_dir}/{model.get_class_name()}_{timestamp[:2]}h{timestamp[2:4]}m')\n",
     "\n",
     "    for epoch in range(num_epochs):\n",
     "        print('EPOCH {}:'.format(epoch + 1))\n",
@@ -265,7 +323,7 @@
     "        # Track best performance, and save the model's state\n",
     "        if avg_vloss < best_vloss:\n",
     "            best_vloss = avg_vloss\n",
-    "            model_path = 'model_{}_{}'.format(timestamp, epoch)\n",
+    "            model_path = f'{training_results_dir}/{model.get_class_name()}_{timestamp}_{epoch}.pt'\n",
     "            torch.save(model.state_dict(), model_path)"
    ]
   },
@@ -1045,10 +1103,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predicting with the trained model\n",
+    "model.load_state_dict(torch.load(\"models/GCN1_state_dict.pt\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3.7088e+06, 3.7088e+06, 3.6916e+06, 3.6916e+06, 3.6039e+06, 2.3990e+06,\n",
+       "        2.3990e+06, 2.3990e+06, 5.1466e+05, 5.1464e+05, 1.0244e+05, 1.0243e+05,\n",
+       "        8.3185e+04, 1.1961e+03, 1.4000e-02, 1.1000e-02, 0.0000e+00])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    fg0 = ds_train.get(0)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -1067,12 +1163,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "516e2a54aee24775a0c69be2c04ea37f9a1e3a885e9b5ce66393c5c31a61000d"
+    "hash": "6fbe1a019293c11979212df1017f5c3a8203512503371a115c3974d4c744b0fd"
    }
   }
  },
