first tries predicting with pickled model

--- a/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
+++ b/ocpa_PyG_integration/integration_ocpa_PyG.ipynb
@@ -1142,8 +1142,10 @@
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    fg0 = ds_train.get(0)\n",
-    "    "
+    "    fg0 = ds_test.get(0)\n",
+    "\n",
+    "        outputs =  \n",
+    "[model(fg.x.float(), fg.edge_index) for fg in ds_test]"
    ]
   }
  ],
