work on adams' experiment || implement train/val/test on PyG Dataset

--- a/reproduce_adams.ipynb
+++ b/reproduce_adams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,27 +16,30 @@
     "from statistics import median as median\n",
     "from tqdm import tqdm\n",
     "from ast import literal_eval\n",
+    "from copy import deepcopy\n",
     "\n",
     "# Data handling\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "# Object centric process mining\n",
-    "from ocpa.objects.log.ocel import OCEL\n",
-    "import ocpa.objects.log.importer.ocel.factory as ocel_import_factory  # json/xml import factory\n",
     "import ocpa.objects.log.importer.csv.factory as csv_import_factory\n",
-    "import ocpa.objects.log.converter.factory as convert_factory\n",
-    "import ocpa.algo.util.filtering.log.time_filtering\n",
-    "import ocpa.algo.util.filtering.log.variant_filtering as trace_filtering\n",
+    "import ocpa.algo.predictive_monitoring.factory as feature_factory\n",
+    "# from ocpa.objects.log.ocel import OCEL\n",
+    "# import ocpa.objects.log.importer.ocel.factory as ocel_import_factory  # json/xml import factory\n",
+    "# import ocpa.objects.log.importer.csv.factory as csv_import_factory\n",
+    "# import ocpa.objects.log.converter.factory as convert_factory\n",
+    "# import ocpa.algo.util.filtering.log.time_filtering\n",
+    "# import ocpa.algo.util.filtering.log.variant_filtering as trace_filtering\n",
     "\n",
-    "# import ocpa.algo.evaluation.precision_and_fitness.utils as evaluation_utils # COMMENTED OUT BY TIM\n",
-    "# import ocpa.algo.evaluation.precision_and_fitness.evaluator as precision_fitness_evaluator # COMMENTED OUT BY TIM\n",
-    "import ocpa.algo.predictive_monitoring.factory as feature_extractor\n",
-    "from ocpa.algo.predictive_monitoring import time_series\n",
-    "from ocpa.algo.predictive_monitoring import tabular, sequential\n",
-    "from ocpa.algo.discovery.ocpn import algorithm as ocpn_discovery_factory\n",
-    "import ocpa.visualization.oc_petri_net.factory as vis_factory\n",
-    "import ocpa.visualization.log.variants.factory as log_viz\n",
+    "# # import ocpa.algo.evaluation.precision_and_fitness.utils as evaluation_utils # COMMENTED OUT BY TIM\n",
+    "# # import ocpa.algo.evaluation.precision_and_fitness.evaluator as precision_fitness_evaluator # COMMENTED OUT BY TIM\n",
+    "# import ocpa.algo.predictive_monitoring.factory as feature_extractor\n",
+    "# from ocpa.algo.predictive_monitoring import time_series\n",
+    "# from ocpa.algo.predictive_monitoring import tabular, sequential\n",
+    "# from ocpa.algo.discovery.ocpn import algorithm as ocpn_discovery_factory\n",
+    "# import ocpa.visualization.oc_petri_net.factory as vis_factory\n",
+    "# import ocpa.visualization.log.variants.factory as log_viz\n",
     "\n",
     "# Visualization\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,12 +71,22 @@
     "    GraphDataLoader,\n",
     "    GCN,\n",
     "    evaluate_gnn,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# PyTorch and PyG\n",
+    "import torch\n",
+    "from ocpa_PyG_integration.EventGraphDataset import EventGraphDataset\n",
+    "\n",
+    "from experiment_config import STORAGE_PATH, RANDOM_SEED, TARGET_LABEL\n",
+    "\n",
+    "# Jupyter notebook stuff\n",
+    "from IPython.display import clear_output\n",
+    "clear_output()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +99,13 @@
     "    \"act_name\": \"event_activity\",\n",
     "    \"time_name\": \"event_timestamp\",\n",
     "    \"sep\": \",\",\n",
-    "    \"take_sample\": 9999,\n",
     "}\n",
     "file_path_object_attribute_table = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,49 +117,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constructing feature graphs\n",
     "activities = list(set(ocel.log.log[\"event_activity\"].tolist()))\n",
     "feature_set = [\n",
-    "    (feature_extractor.EVENT_REMAINING_TIME, ()),\n",
-    "    (feature_extractor.EVENT_PREVIOUS_TYPE_COUNT, (\"GDSRCPT\",)),\n",
-    "    (feature_extractor.EVENT_ELAPSED_TIME, ()),\n",
-    "] + [(feature_extractor.EVENT_PRECEDING_ACTIVITES, (act,)) for act in activities]\n",
-    "feature_storage = feature_extractor.apply(ocel, feature_set, [])"
+    "    (feature_factory.EVENT_REMAINING_TIME, ()),\n",
+    "    (feature_factory.EVENT_PREVIOUS_TYPE_COUNT, (\"GDSRCPT\",)),\n",
+    "    (feature_factory.EVENT_ELAPSED_TIME, ()),\n",
+    "] + [(feature_factory.EVENT_PRECEDING_ACTIVITES, (act,)) for act in activities]\n",
+    "feature_storage = feature_factory.apply(ocel, feature_set, [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading pickled feature storage objects\n",
-    "with open(f\"data/processed/BPI2017-feature_storage.pkl\", \"rb\") as file:\n",
-    "    feature_storage = pickle.load(file)\n",
-    "\n",
-    "with open(f\"data/processed/BPI2017-ocel.pkl\", \"rb\") as file:\n",
-    "    ocel = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31509/31509 [00:22<00:00, 1396.01it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Setting up for machine learning tasks\n",
-    "feature_storage.extract_normalized_train_test_split(0.3, state=42)\n",
+    "feature_storage.extract_normalized_train_test_split(test_size=0.3, state=3)\n",
     "\n",
     "# keep list of first three events for comparability of regression use case\n",
     "events_to_remove = []\n",
     "for g in tqdm(feature_storage.feature_graphs):\n",
     "    event_ids = [n.event_id for n in g.nodes]\n",
     "    event_ids.sort()\n",
-    "    events_to_remove = events_to_remove + event_ids[:3] # is that not 4?\n",
+    "    events_to_remove = events_to_remove + event_ids[:3] # COMMENT BY TIM: is that not 4?\n",
     "\n",
     "label_order = None\n",
     "\n",
@@ -156,25 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Case study 5 - Graph-based variant visualization\n",
-    "\n",
-    "uc5 = \"USE CASE 5 - Graph-based variant visualization\"\n",
-    "print(\"_\"*len(uc5))\n",
-    "print(uc5)\n",
-    "print(\"_\"*len(uc5))\n",
-    "layouting = log_viz.apply(ocel)\n",
-    "print(layouting[ocel.variants[61]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________\n",
+      "USE CASE 6 - Graph neural network prediction\n",
+      "____________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Case study 6 - Graph Neural Network Prediction\n",
     "\n",
@@ -184,7 +184,65 @@
     "print(\"_\"*len(uc6))\n",
     "\n",
     "# Building train-val-test graphs for DGL\n",
-    "train_idx, val_idx = train_test_split(feature_storage.training_indices, test_size=0.2)\n",
+    "train_idx, val_idx = train_test_split(feature_storage.train_indices, test_size=0.2)\n",
+    "\n",
+    "# Saving Niklas' exact train/val indices into the feature_storage object\n",
+    "feature_storage.train_indices = train_idx\n",
+    "feature_storage.validation_indices = val_idx\n",
+    "\n",
+    "# Saving feature_storage object to disk for PyG\n",
+    "with open(f\"{STORAGE_PATH}/raw/BPI2017-adams.fs\", \"wb\") as file:\n",
+    "    pickle.dump(feature_storage, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing...\n",
+      "17644it [00:05, 3186.33it/s]\n",
+      "Done!\n",
+      "Processing...\n",
+      "4412it [00:01, 3065.87it/s]\n",
+      "Done!\n",
+      "Processing...\n",
+      "9453it [00:03, 3125.74it/s]\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds_train = EventGraphDataset(\n",
+    "    root=STORAGE_PATH,\n",
+    "    filename=\"BPI2017-adams.fs\",\n",
+    "    label_key=TARGET_LABEL,\n",
+    "    train=True,\n",
+    ")\n",
+    "ds_val = EventGraphDataset(\n",
+    "    root=STORAGE_PATH,\n",
+    "    filename=\"BPI2017-adams.fs\",\n",
+    "    label_key=TARGET_LABEL,\n",
+    "    validation=True,\n",
+    ")\n",
+    "ds_test = EventGraphDataset(\n",
+    "    root=STORAGE_PATH,\n",
+    "    filename=\"BPI2017-adams.fs\",\n",
+    "    label_key=TARGET_LABEL,\n",
+    "    test=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_train, y_train = generate_graph_dataset(\n",
     "    feature_storage.feature_graphs, train_idx, ocel\n",
     ")\n",
@@ -226,15 +284,8 @@
     "tf.keras.backend.clear_session()\n",
     "model = GCN(24, 24)\n",
     "optimizer = tf.keras.optimizers.Adam(learning_rate=0.01)\n",
-    "loss_function = tf.keras.losses.MeanAbsoluteError()\n"
+    "loss_function = tf.keras.losses.MeanAbsoluteError()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -357,6 +408,22 @@
     "plt.savefig(\"shap_graph.png\")\n",
     "pd.DataFrame(accuracy_dict).to_csv(\"results_table.csv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case study 5 - Graph-based variant visualization\n",
+    "\n",
+    "uc5 = \"USE CASE 5 - Graph-based variant visualization\"\n",
+    "print(\"_\"*len(uc5))\n",
+    "print(uc5)\n",
+    "print(\"_\"*len(uc5))\n",
+    "layouting = log_viz.apply(ocel)\n",
+    "print(layouting[ocel.variants[61]])"
+   ]
   }
  ],
  "metadata": {
@@ -375,12 +442,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6fbe1a019293c11979212df1017f5c3a8203512503371a115c3974d4c744b0fd"
+    "hash": "516e2a54aee24775a0c69be2c04ea37f9a1e3a885e9b5ce66393c5c31a61000d"
    }
   }
  },
