clean up, refactor, type hint, name conventions, add subgraph sample functionality

--- a/replicating/reproduce_adams.ipynb
+++ b/replicating/reproduce_adams.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 57\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mbackend\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mK\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[39m# Custom GNN tools\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moriginal_experiment\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgnn_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[1;32m     58\u001b[0m     generate_graph_dataset,\n\u001b[1;32m     59\u001b[0m     get_ordered_event_list,\n\u001b[1;32m     60\u001b[0m     visualize_graph,\n\u001b[1;32m     61\u001b[0m     show_remaining_times,\n\u001b[1;32m     62\u001b[0m     visualize_instance,\n\u001b[1;32m     63\u001b[0m     GraphDataLoader,\n\u001b[1;32m     64\u001b[0m     GCN,\n\u001b[1;32m     65\u001b[0m     evaluate_gnn,\n\u001b[1;32m     66\u001b[0m )\n\u001b[1;32m     68\u001b[0m \u001b[39m# PyTorch and PyG\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
     "# SELF REMINDER. Copy the 'ocpa' directory to the forked one from github, so that I can push updates to github.\n",
     "\n",
@@ -62,7 +74,7 @@
     "import keras.backend as K\n",
     "\n",
     "# Custom GNN tools\n",
-    "from gnn_utils import (\n",
+    "from ...original_experiment.gnn_utils import (\n",
     "    generate_graph_dataset,\n",
     "    get_ordered_event_list,\n",
     "    visualize_graph,\n",
@@ -75,9 +87,9 @@
     "\n",
     "# PyTorch and PyG\n",
     "import torch\n",
-    "from ocpa_PyG_integration.EventGraphDataset import EventGraphDataset\n",
+    "from ..ocpa_PyG_integration.EventGraphDataset import EventGraphDataset\n",
     "\n",
-    "from experiment_config import STORAGE_PATH, RANDOM_SEED, TARGET_LABEL\n",
+    "from .experiment_config import STORAGE_PATH, RANDOM_SEED, TARGET_LABEL\n",
     "\n",
     "# Jupyter notebook stuff\n",
     "from IPython.display import clear_output\n",
