subgraph sampling functionality working

--- a/debug_script.ipynb
+++ b/debug_script.ipynb
@@ -6,11 +6,19 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Torch version: 1.13.1+cu117\n",
-            "Cuda available: True\n",
+            "Torch version: 1.13.1+cpu\n",
+            "Cuda available: False\n",
             "Torch geometric version: 2.2.0\n"
           ]
         }
@@ -68,59 +76,13 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "data/ocpa-processed/processed\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Processing...\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ds_val \u001b[39m=\u001b[39m EventGraphDataset(\n\u001b[1;32m      2\u001b[0m     root\u001b[39m=\u001b[39;49mSTORAGE_PATH,\n\u001b[1;32m      3\u001b[0m     filename\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mBPI2017-adams.fs\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      4\u001b[0m     label_key\u001b[39m=\u001b[39;49mTARGET_LABEL,\n\u001b[1;32m      5\u001b[0m     \u001b[39m# size_subgraph_samples=4,\u001b[39;49;00m\n\u001b[1;32m      6\u001b[0m     validation\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[1;32m      7\u001b[0m     verbosity\u001b[39m=\u001b[39;49m\u001b[39m51\u001b[39;49m\n\u001b[1;32m      8\u001b[0m )\n",
-            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/replicating/ocpa_PyG_integration/EventGraphDataset.py:126\u001b[0m, in \u001b[0;36mEventGraphDataset.__init__\u001b[0;34m(self, root, filename, label_key, size_subgraph_samples, train, validation, test, verbosity, transform, pre_transform, file_extension)\u001b[0m\n\u001b[1;32m    124\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_base_filename \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m_test\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    125\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file_extension \u001b[39m=\u001b[39m file_extension\n\u001b[0;32m--> 126\u001b[0m \u001b[39msuper\u001b[39;49m(EventGraphDataset, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(root, transform, pre_transform)\n",
-            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch_geometric/data/dataset.py:94\u001b[0m, in \u001b[0;36mDataset.__init__\u001b[0;34m(self, root, transform, pre_transform, pre_filter, log)\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_download()\n\u001b[1;32m     93\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m] \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mDataset\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m---> 94\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_process()\n",
-            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch_geometric/data/dataset.py:211\u001b[0m, in \u001b[0;36mDataset._process\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    208\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mProcessing...\u001b[39m\u001b[39m'\u001b[39m, file\u001b[39m=\u001b[39msys\u001b[39m.\u001b[39mstderr)\n\u001b[1;32m    210\u001b[0m makedirs(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocessed_dir)\n\u001b[0;32m--> 211\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprocess()\n\u001b[1;32m    213\u001b[0m path \u001b[39m=\u001b[39m osp\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocessed_dir, \u001b[39m'\u001b[39m\u001b[39mpre_transform.pt\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    214\u001b[0m torch\u001b[39m.\u001b[39msave(_repr(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpre_transform), path)\n",
-            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/replicating/ocpa_PyG_integration/EventGraphDataset.py:198\u001b[0m, in \u001b[0;36mEventGraphDataset.process\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[39m# Retrieve Feature_Storage object from disk\u001b[39;00m\n\u001b[1;32m    197\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mraw_paths[\u001b[39m0\u001b[39m], \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m--> 198\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39;49mload(file)\n\u001b[1;32m    200\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrain:\n\u001b[1;32m    201\u001b[0m     \u001b[39m# Retrieve feature graphs with train indices and write to disk\u001b[39;00m\n\u001b[1;32m    202\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_feature_graphs_to_disk(\n\u001b[1;32m    203\u001b[0m         [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mfeature_graphs[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mtrain_indices]\n\u001b[1;32m    204\u001b[0m     )\n",
-            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/sklearn/base.py:306\u001b[0m, in \u001b[0;36mBaseEstimator.__setstate__\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m    303\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    304\u001b[0m         \u001b[39mreturn\u001b[39;00m state\n\u001b[0;32m--> 306\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__setstate__\u001b[39m(\u001b[39mself\u001b[39m, state):\n\u001b[1;32m    307\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__module__\u001b[39m\u001b[39m.\u001b[39mstartswith(\u001b[39m'\u001b[39m\u001b[39msklearn.\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m    308\u001b[0m         pickle_version \u001b[39m=\u001b[39m state\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39m_sklearn_version\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mpre-0.18\u001b[39m\u001b[39m\"\u001b[39m)\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
-      "source": [
-        "ds_val = EventGraphDataset(\n",
-        "    root=STORAGE_PATH,\n",
-        "    filename=\"BPI2017-adams.fs\",\n",
-        "    label_key=TARGET_LABEL,\n",
-        "    # size_subgraph_samples=4,\n",
-        "    validation=True,\n",
-        "    verbosity=51\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
       "outputs": [],
       "source": [
         "ds_train = EventGraphDataset(\n",
         "    root=STORAGE_PATH,\n",
         "    filename=\"BPI2017-adams.fs\",\n",
         "    label_key=TARGET_LABEL,\n",
+        "    size_subgraph_samples=4,\n",
         "    train=True,\n",
         "    verbosity=51\n",
         ")\n",
@@ -128,7 +90,7 @@
         "    root=STORAGE_PATH,\n",
         "    filename=\"BPI2017-adams.fs\",\n",
         "    label_key=TARGET_LABEL,\n",
-        "    # size_subgraph_samples=4,\n",
+        "    size_subgraph_samples=4,\n",
         "    validation=True,\n",
         "    verbosity=51\n",
         ")\n",
@@ -136,6 +98,7 @@
         "    root=STORAGE_PATH,\n",
         "    filename=\"BPI2017-adams.fs\",\n",
         "    label_key=TARGET_LABEL,\n",
+        "    size_subgraph_samples=4,\n",
         "    test=True,\n",
         "    verbosity=51\n",
         ")"
@@ -660,7 +623,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
