--- a/debug_script.ipynb
+++ b/debug_script.ipynb
@@ -6,19 +6,11 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Torch version: 1.13.1+cpu\n",
-            "Cuda available: False\n",
+            "Torch version: 1.13.1+cu117\n",
+            "Cuda available: True\n",
             "Torch geometric version: 2.2.0\n"
           ]
         }
@@ -70,6 +62,38 @@
         "    \"sep\": \",\",\n",
         "}\n",
         "file_path_object_attribute_table = None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open(f\"{STORAGE_PATH}/raw/BPI2017-adams.fs\", \"rb\",) as file:\n",
+        "    fs = pickle.load( file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[100, 101, 102, 103, 104]"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "current_idx = 100\n",
+        "x = range(current_idx,current_idx+5)\n",
+        "list(x)"
       ]
     },
     {
@@ -623,7 +647,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.9.16"
     }
   },
   "nbformat": 4,
